--- a/css/index-style.css
+++ b/css/index-style.css
@@ -240,6 +240,7 @@ h5{
 	font-size: 30px;
 	font-weight: bold;
 	margin-bottom: 25px;
+	text-align: center;
 }
 .contact-me .button-two{
 	background-color: red;
